--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
     "short_name": "thanwannahtun",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#0175C2",
-    "theme_color": "#0175C2",
+    "background_color": "assets/images/thanwannahtun.ico",
+    "theme_color": "#FFFFFF",
     "description": "Portfolio for me , Thanwanna",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
